news and updates spacing issue, share icons discussions-detail.html.twig

--- a/app/assets/styles/modules/_insight.scss
+++ b/app/assets/styles/modules/_insight.scss
@@ -244,9 +244,9 @@
 		display: -webkit-box;
 	}
 	.single-discussion{ .share-icon {
-		position: relative; 
+		position: absolute;
 		padding-left: 0;
-		top: 40px;
+		top: 220px;
 	}}
 	.insight-card-footer {
 		border-top: 1px solid $purpleColor;
