--- a/themes/custom/athena/assets/styles/style.scss
+++ b/themes/custom/athena/assets/styles/style.scss
@@ -84,9 +84,7 @@ img {
 #registrationModal  {padding-right:0 !important;}
 #block-latestinsightssidebarblock .row {width: auto;}
 #block-athena-content img {max-width:100%; min-height:auto;}
-.reason-section {
-    margin: 100px 0 50px 0;
-}
+ 
 .corporate-txt img  {height:auto; max-width:100%;}
 .top-banner .logos {width:auto;}
  
